; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_1219.c_found.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_1219.c_found.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @found(i8* %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32* %6, i32** %14, align 8
  %17 = load i32, i32* %12, align 4
  %18 = load i32, i32* %12, align 4
  %19 = load i32, i32* %11, align 4
  %20 = sub nsw i32 %18, %19
  %21 = sdiv i32 %20, 2
  %22 = sub nsw i32 %17, %21
  store i32 %22, i32* %16, align 4
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %11, align 4
  %25 = sub nsw i32 %23, %24
  %26 = icmp slt i32 %25, 6
  br i1 %26, label %27, label %37

27:                                               ; preds = %7
  %28 = load i8*, i8** %8, align 8
  %29 = load i8*, i8** %9, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %13, align 4
  %34 = call i32 @brute(i8* %28, i8* %29, i32 %30, i32 %31, i32 %32, i32 %33)
  store i32 %34, i32* %15, align 4
  %35 = load i32, i32* %15, align 4
  %36 = load i32*, i32** %14, align 8
  store i32 %35, i32* %36, align 4
  br label %64

37:                                               ; preds = %7
  %38 = load i8*, i8** %8, align 8
  %39 = load i8*, i8** %9, align 8
  %40 = load i32, i32* %13, align 4
  %41 = load i32, i32* %16, align 4
  %42 = load i32, i32* %10, align 4
  %43 = call i32 @check(i8* %38, i8* %39, i32 %40, i8 signext 62, i32 %41, i32 %42)
  %44 = icmp eq i32 %43, 1
  br i1 %44, label %45, label %54

45:                                               ; preds = %37
  %46 = load i8*, i8** %8, align 8
  %47 = load i8*, i8** %9, align 8
  %48 = load i32, i32* %10, align 4
  %49 = load i32, i32* %16, align 4
  %50 = load i32, i32* %12, align 4
  %51 = load i32, i32* %13, align 4
  %52 = load i32*, i32** %14, align 8
  %53 = call i32 @found(i8* %46, i8* %47, i32 %48, i32 %49, i32 %50, i32 %51, i32* %52)
  br label %63

54:                                               ; preds = %37
  %55 = load i8*, i8** %8, align 8
  %56 = load i8*, i8** %9, align 8
  %57 = load i32, i32* %10, align 4
  %58 = load i32, i32* %11, align 4
  %59 = load i32, i32* %16, align 4
  %60 = load i32, i32* %13, align 4
  %61 = load i32*, i32** %14, align 8
  %62 = call i32 @found(i8* %55, i8* %56, i32 %57, i32 %58, i32 %59, i32 %60, i32* %61)
  br label %63

63:                                               ; preds = %54, %45
  br label %64

64:                                               ; preds = %63, %27
  ret i32 0
}

declare dso_local i32 @brute(i8*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @check(i8*, i8*, i32, i8 signext, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
